--- a/index.html
+++ b/index.html
@@ -18,17 +18,27 @@
 </head>
 <body>
     <header>
-        <nav class="web-logo">
-            <a href="#">Influencer products</a>
-        </nav>
-        <nav class="nav-bar">
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Sign up</a>
-            <a href="#">Log in</a>
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <div class="mobile-cart">
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-        </nav>
+        </div>
+        <div class="pc-navbar">
+            <nav class="web-logo">
+                <a href="#">Influencer products</a>
+            </nav>
+            <nav class="nav-bar">
+                <a href="#">Home</a>
+                <a href="#">Products</a>
+                <a href="#">Sign up</a>
+                <a href="#">Log in</a>
+                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            </nav>
+        </div>
+        <div class="mobile-bar">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </div>
+        
+        
     </header>
     <main>
         <section>
